Thu Sep 11 14:01:47 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/tmplinst.cpp:

          Added more template specializations to placate explicit
          template instantiation builds.

Thu Sep 11 08:32:00 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/RTScheduling/Fixed_Priority_Scheduler/Makefile:
	* examples/RTScheduling/MIF_Scheduler/Makefile:

	  Removed duplicate library instances in link command.  Addresses
	  link errors showing up in statically linked builds.

Wed Sep 10 17:49:10 2003  George Edwards <g.edwards@vanderbilt.edu>

        Added files:

        * tests/OBV/Supports/Supports_Test.mpc:
        * tests/OBV/Supports/client.cpp:
        * tests/OBV/Supports/server.cpp:

        Removed files:

        * tests/OBV/Supports/Makefile:
        * tests/OBV/Supports/Makefile.bor:
        * tests/OBV/Supports/Client.dsp:
        * tests/OBV/Supports/Server.dsp:
        * tests/OBV/Supports/Supports_Test.dsw:
        * tests/OBV/Supports/Supports_Test.ncb:
        * tests/OBV/Supports/Client/client.cpp:
        * tests/OBV/Supports/Server/Server.cpp:

          Removed project files and make files. Added a MPC file that will
          eliminate include errors. Moved all files to same directory.

Wed Sep 10 16:03:50 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/RTScheduling/RTScheduler_Manager.h:

          Removed all manipulations of MSVC #pragma warning disables.
          Everything necessary is already in config-win32-msvc-*.h
          and the further #pragmas were actually re-enabling some of
          the warnings.

Wed Sep 10 13:19:23 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/tmplinst.cpp:

          Added explicit template instantiations of
          TAO_IFR_Generic_Utils<CORBA::ExtInitializerSeq>,
          TAO_IFR_Generic_Utils<CORBA::InitializerSeq>,
          POA_CORBA::ExtValueDef_tie<TAO_ExtValueDef_i>, and